first cut on forest. surely it's wrong

--- a/code/frozen.ipynb
+++ b/code/frozen.ipynb
@@ -510,63 +510,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def policyIteration(t, r, gammas, showResults=False, max_iterations=100000):\n",
+    "def policyiteration(t, r, gammas, showresults=False, max_iterations=100000):\n",
     "    # create data structure to save off\n",
     "    columns = ['gamma', 'epsilon', 'time', 'iterations', 'reward', 'average_steps', 'steps_stddev', 'success_pct', 'policy', 'mean_rewards', 'max_rewards', 'error']\n",
-    "    data = pd.DataFrame(0.0, index=np.arange(len(gammas)), columns=columns)\n",
+    "    data = pd.dataframe(0.0, index=np.arange(len(gammas)), columns=columns)\n",
     "    \n",
-    "    print('Gamma,\\tTime,\\tIter,\\tReward')\n",
+    "    print('gamma,\\ttime,\\titer,\\treward')\n",
     "    print(80*'_')\n",
     "    \n",
-    "    testNum = 0\n",
+    "    testnum = 0\n",
     "    for g in gammas:\n",
-    "        test = PolicyIteration(t, r, gamma=g, max_iter=max_iterations, eval_type=\"matrix\") # eval_type=\"iterative\"\n",
+    "        test = policyiteration(t, r, gamma=g, max_iter=max_iterations, eval_type=\"matrix\") # eval_type=\"iterative\"\n",
     "        \n",
     "        runs  = test.run()\n",
     "        time  = test.time\n",
     "        iters = test.iter\n",
-    "        maxR  = runs[-1]['Max V']\n",
+    "        maxr  = runs[-1]['max v']\n",
     "        \n",
     "        print(iters, time)\n",
     "        \n",
     "        max_rewards, mean_rewards, errors = [], [], []\n",
     "        for run in runs:\n",
-    "            max_rewards.append(run['Max V'])\n",
-    "            mean_rewards.append(run['Mean V'])\n",
-    "            errors.append(run['Error'])\n",
+    "            max_rewards.append(run['max v'])\n",
+    "            mean_rewards.append(run['mean v'])\n",
+    "            errors.append(run['error'])\n",
     "        \n",
     "        policy = np.array(test.policy)\n",
     "        policy = policy.reshape(4,4)\n",
     "        \n",
-    "        data['gamma'][testNum]        = g\n",
-    "        data['time'][testNum]         = time\n",
-    "        data['iterations'][testNum]   = iters\n",
-    "        data['reward'][testNum]       = maxR\n",
-    "        data['mean_rewards'][testNum] = {tuple(mean_rewards)}\n",
-    "        data['max_rewards'][testNum]  = {tuple(max_rewards)}\n",
-    "        data['error'][testNum]        = {tuple(errors)}\n",
-    "        data['policy'][testNum]       = {test.policy}\n",
+    "        data['gamma'][testnum]        = g\n",
+    "        data['time'][testnum]         = time\n",
+    "        data['iterations'][testnum]   = iters\n",
+    "        data['reward'][testnum]       = maxr\n",
+    "        data['mean_rewards'][testnum] = {tuple(mean_rewards)}\n",
+    "        data['max_rewards'][testnum]  = {tuple(max_rewards)}\n",
+    "        data['error'][testnum]        = {tuple(errors)}\n",
+    "        data['policy'][testnum]       = {test.policy}\n",
     "        \n",
-    "        print('%.2f,\\t%.2f,\\t%d,\\t%f' % (g, time, iters, maxR))\n",
+    "        print('%.2f,\\t%.2f,\\t%d,\\t%f' % (g, time, iters, maxr))\n",
     "        \n",
-    "        if showResults:\n",
-    "            title = 'FrozenLake_PI_' + str(rows) + 'x' + str(cols) + '_g' + str(g)\n",
+    "        if showresults:\n",
+    "            title = 'frozenlake_pi_' + str(rows) + 'x' + str(cols) + '_g' + str(g)\n",
     "            plot_lake(env, policy, title)\n",
     "        \n",
-    "        testNum = testNum + 1\n",
+    "        testnum = testnum + 1\n",
     "            \n",
-    "    # See differences in policy\n",
+    "    # see differences in policy\n",
     "    policies = data['policy']\n",
     "    \n",
     "    for i,p in enumerate(policies):\n",
     "        pol = list(p)[0]\n",
-    "        steps, steps_stddev, failures = get_score(env, pol, showResults)\n",
+    "        steps, steps_stddev, failures = get_score(env, pol, showresults)\n",
     "        data['average_steps'][i] = steps\n",
     "        data['steps_stddev'][i]  = steps_stddev\n",
     "        data['success_pct'][i]   = 100-failures      \n",
     "        \n",
-    "    # replace all NaN's\n",
-    "    data.fillna(0, inplace=True)\n",
+    "    # replace all nan's\n",
+    "    data.fillna(0, inplace=true)\n",
     "    data.head()\n",
     "        \n",
     "    return data"
@@ -3486,21 +3486,6 @@
     "# Plot alpha decay vs success pct\n",
     "plot_QL('alpha_decay', 'success_pct', title='Mean Success Percentage vs. Alpha Decay')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 165,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dependent variable not available\n"
-     ]
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "markdown",
