saving some for tomorrow

--- a/code/forest.ipynb
+++ b/code/forest.ipynb
@@ -584,7 +584,9 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
