--- a/code/forest.ipynb
+++ b/code/forest.ipynb
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -221,17 +221,17 @@
       "0.30,\t1E-08,\t0.00,\t15,\t5.491933\n",
       "0.30,\t1E-12,\t0.00,\t22,\t5.491933\n",
       "0.60,\t1E-02,\t0.00,\t11,\t8.797055\n",
-      "0.60,\t1E-03,\t0.01,\t15,\t8.808703\n",
-      "0.60,\t1E-08,\t0.01,\t33,\t8.809994\n",
+      "0.60,\t1E-03,\t0.00,\t15,\t8.808703\n",
+      "0.60,\t1E-08,\t0.00,\t33,\t8.809994\n",
       "0.60,\t1E-12,\t0.01,\t48,\t8.809994\n",
-      "0.90,\t1E-02,\t0.02,\t39,\t23.089675\n",
-      "0.90,\t1E-03,\t0.02,\t50,\t23.147532\n",
-      "0.90,\t1E-08,\t0.05,\t105,\t23.172360\n",
+      "0.90,\t1E-02,\t0.00,\t39,\t23.089675\n",
+      "0.90,\t1E-03,\t0.01,\t50,\t23.147532\n",
+      "0.90,\t1E-08,\t0.01,\t105,\t23.172360\n",
       "0.90,\t1E-12,\t0.02,\t149,\t23.172433\n",
-      "1.00,\t1E-02,\t0.09,\t298,\t176.171745\n",
-      "1.00,\t1E-03,\t0.08,\t320,\t186.592798\n",
-      "1.00,\t1E-08,\t0.09,\t429,\t238.224376\n",
-      "1.00,\t1E-12,\t0.12,\t516,\t279.434902\n"
+      "1.00,\t1E-02,\t0.05,\t298,\t176.171745\n",
+      "1.00,\t1E-03,\t0.04,\t320,\t186.592798\n",
+      "1.00,\t1E-08,\t0.05,\t429,\t238.224376\n",
+      "1.00,\t1E-12,\t0.14,\t516,\t279.434902\n"
      ]
     }
    ],
@@ -245,10 +245,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     {(0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...\n",
+       "1     {(0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...\n",
+       "2     {(0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...\n",
+       "3     {(0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...\n",
+       "4     {(0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...\n",
+       "5     {(0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...\n",
+       "6     {(0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...\n",
+       "7     {(0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...\n",
+       "8     {(0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...\n",
+       "9     {(0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...\n",
+       "10    {(0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...\n",
+       "11    {(0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...\n",
+       "12    {(0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...\n",
+       "13    {(0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...\n",
+       "14    {(0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...\n",
+       "15    {(0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...\n",
+       "16    {(0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...\n",
+       "17    {(0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...\n",
+       "18    {(0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...\n",
+       "19    {(0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...\n",
+       "Name: policy, dtype: object"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vi_data['policy']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -887,7 +920,7 @@
     "epsilon_decays = [0.9, 0.999]\n",
     "iterations     = [1e5]\n",
     "\n",
-    "''' PROCEED WITH CAUTION >>>> THIS WILL OVERWRITE DATA AND TAKE HOURS'''\n",
+    "''' PROCEED WITH CAUTION >>>> THIS WILL OVERWRITE DATA AND TAKE HOURS\n",
     "\n",
     "ql_data  = qLearning(T, R, gammas, alphas, alpha_decays=alpha_decays, epsilon_decays=epsilon_decays, n_iterations=iterations, showResults=False)\n",
     "\n",
@@ -895,7 +928,7 @@
     "csvFile = 'forest/QL_results.csv'\n",
     "ql_data.to_csv(csvFile)\n",
     "\n",
-    "''''''\n",
+    "'''\n",
     "\n",
     "ql_data.head()"
    ]
